2012-08-07 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Reverting the NTUP_TRKVALID change for now for security
	  reasons. (Causes problems in devval, may cause problems
	  in 17.2.X.Y(.Z) as well.)
	* Tagging Brjorn's changes in MergeNTUP_trf.
	* Tagging as PATJobTransforms-00-04-29

2012-03-12  Bjorn Sarrazin <bjorn.sarrazin@cern.ch>
	* sort input files in MergeNTUP_trf such that files with 0 events are at the end of the list
	* add argument sortInputFiles to Configuration.py in order do be able switch above feature off

2012-07-23 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Moved the NTUP_TRKVALID creation from the R2E step to the
	  E2D one. This was on the request of Stephane Willocq,
	  and should be harmless. (NTUP_TRKVALID is not made
	  centrally.)
	* Tagging as PATJobTransforms-00-04-28

2012-07-14 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Update ValidateD3PD skeleton and LODPK to accept inputAODFile and inputESDFile 
        (corrects problem with prodsys [a,b,c] notation).

2012-07-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Correct CMT requirements and remove dummy pickle file
    * Minor changes to mk-trf-pickle script
    * Tagging as PATJobTransforms-00-04-27

2012-07-06 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Remove unnecessary padding code in rhadd.py; cosmetic improvements
    * Add mergeParallel argument to enable parallel rhadd.py merges from transform
    * Convert mergeParallel and mergeChunks to BasicIntArg
    * Add asetup argument for switching release before running athena; added to LODPK for Reco_trf
    *** Important: From this tag onwards you require PyJobTransformsCore >= 00-09-24 ***
    * Tagging as PATJobTransforms-00-04-26

2012-07-06 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add PATJobTransformsSignatures.pickle dummy file (avoid CMT warning)
    * Give correct location for PATJobTransformsSignatures.pickle in requirements (../share)
    